--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,4 +1,22 @@
+/*
+ROOT STYLES
+*/
+
 .main {
+  display: block;
+}
+
+.logo {
+  height: 30vmin;
+  pointer-events: none;
+}
+
+.app {
+  text-align: center;
+  background-color: black;
+}
+
+.page {
   max-width: 1440px;
   margin: 0 auto;
 
@@ -12,47 +30,90 @@
   padding-right: 2rem;
 }
 
-/*
-ROOT STYLES
-*/
-
-.App {
-  text-align: center;
-  background-color: black;
-}
 
 /*
-IMAGES
+Facts Panel
 */
 
-.logo {
-  height: 30vmin;
-  pointer-events: none;
-}
-
-
-/**/
-
-.text-logo-centered {
-  display: grid;
-}
-
-.first-group {
+.factsPanel {
   display: flex;
   max-width: 100vw;
   align-items: center;
   margin-bottom: 4rem;
 }
 
-.second-group {
+.factsPanelText {
+  display: grid;
+}
+
+.factsPanelTextGroup {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: left;
+}
+
+.dsimgContainer {
+  justify-self: end;
+  width: 100%;
+}
+
+.dsimg {
+  max-width: 100%;
+  min-width: 365px;
+  min-height: 425px;
+  object-fit: cover;
+
+  max-height: 100%;
+  width: auto;
+  height: auto;
+}
+
+@-webkit-keyframes rotating /* Safari and Chrome */ {
+  from {
+    -webkit-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  to {
+    -webkit-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@keyframes rotating {
+  from {
+    -ms-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  to {
+    -ms-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+.rotating {
+  -webkit-animation: rotating 8s linear infinite;
+  -moz-animation: rotating 8s linear infinite;
+  -ms-animation: rotating 8s linear infinite;
+  -o-animation: rotating 8s linear infinite;
+  animation: rotating 8s linear infinite;
+}
+
+
+/*
+Methodologies Panel
+*/
+
+.methodologiesPanel {
   display: flex;
   flex-direction: column;
   margin-bottom: 4rem;
-}
-
-.third-group {
-  width: 100%;
-  margin-bottom: 3rem;
 }
 
 .testimonials {
@@ -61,6 +122,7 @@ IMAGES
   max-width: 100vw;
   text-align: left;
 }
+
 .testimonial {
   display: flex;
   flex-direction: column;
@@ -68,21 +130,40 @@ IMAGES
   flex-basis: 0;
 }
 
-.testimonials .testimonial-title h3 {
+.testimonials .testimonialTitle h3 {
   margin: 0;
 }
 
-.testimonials .testimonial-txt p{
+.testimonials .testimonialTxt p{
   font-weight: 300;
   margin-top: 0.5em;
 }
 
-.testimonials .testimonial-small-txt {
+.testimonials .testimonialSmallTxt {
   font-weight: 200;
   font-size: 0.5em;
 }
 
-/* ----------CARD STYLE---------- */
+
+/*
+Articles Panel
+*/
+
+.articlesPanel {
+  width: 100%;
+  margin-bottom: 3rem;
+}
+
+.notebooks {
+  display: flex;
+  justify-content: space-evenly;
+  max-width: 100vw;
+}
+
+
+/*
+ Card
+ */
 
 .bg {
   overflow: hidden;
@@ -138,102 +219,36 @@ a:not(.inactive):hover {
   object-fit: cover;
 }
 
-/* ---------------------- */
-
-.notebooks {
-  display: flex;
-  justify-content: space-evenly;
-  max-width: 100vw;
-}
-
-.image-container-1 {
-  justify-self: end;
-  width: 100%;
-}
-
-.dsimg {
-  max-width: 100%;
-  min-width: 365px;
-  min-height: 425px;
-  object-fit: cover;
-
-  max-height: 100%;
-  width: auto;
-  height: auto;
-}
-
-@-webkit-keyframes rotating /* Safari and Chrome */ {
-  from {
-    -webkit-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  to {
-    -webkit-transform: rotate(360deg);
-    -o-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-@keyframes rotating {
-  from {
-    -ms-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -webkit-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  to {
-    -ms-transform: rotate(360deg);
-    -moz-transform: rotate(360deg);
-    -webkit-transform: rotate(360deg);
-    -o-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-.rotating {
-  -webkit-animation: rotating 8s linear infinite;
-  -moz-animation: rotating 8s linear infinite;
-  -ms-animation: rotating 8s linear infinite;
-  -o-animation: rotating 8s linear infinite;
-  animation: rotating 8s linear infinite;
-}
 
 /*
-TEXTS
+MULTIPLE USAGE CLASSES
 */
-
-.text-group-1 {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: left;
-}
 
 .header {
   text-align: left;
 }
 
-.sub-header p {
+.subHeader p {
   margin: 0 ;
 }
+
 
 /* ############## */
 /* MOBILE SUPPORT */
 /* ############## */
 
-
 @media screen and (max-width: 765px) {
+
+  .factsPanel {
+    display: flex;
+    flex-direction: column;
+  }
 
   .logo {
     width: 80vw;
   }
 
-  .first-group {
-    display: flex;
-    flex-direction: column;
-  }
-
-  #ds-image {
+  .dsimg {
     min-width: 30%;
     min-height: 30%;
   }
