--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,10 @@
 :root {
+  --blue: #2C3056;
   --blue2: #2272FF;
   --orange: #FF5F1F;
+  --black: #000000;
   --grey: #ACADAF;
+  --white: #FFF;
 }
 
 /*
@@ -56,6 +59,26 @@ code {
     monospace;
 }
 
+section {
+  padding-top: 200px;
+  padding-bottom: 200px;
+}
+
+section::after {
+  bottom: 0;
+  left: 0;
+  content: '';
+  width: 100%;
+  height: 80%;
+}
+
+/*
+SCROLLING
+*/
+
+html {
+    scroll-behavior: smooth;
+}
 
 /* ############## */
 /* MOBILE SUPPORT */
